--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#157878">
-    <link rel="stylesheet" href="/official/style.css">
+    <link rel="stylesheet" href="/-/jekyll-theme-slate.css">
   </head>
   <body>
     <section class="page-header">
       <h1 class="project-name">SpaceDroidROM</h1>
       <h2 class="project-tagline">Android 7.1.2 based custom rom.</h2>
-          <p><img src="/official/SpaceMIUI.jpg" alt="SpaceMIUI ART"/></p>
+          <p><img src="/-/SpaceMIUI.jpg" alt="SpaceMIUI ART"/></p>
         <h2>Supported devices</h2>
         <table>
             <tr>
