--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta property="og:description" content="MIUI 9 based custom rom.">
 <meta property="og:site_name" content="SpaceMIUI">
 <script type="application/ld+json">
-{"name":"SpaceDroidROM","description":"Android 8.1 based custom rom.","@context":"http://schema.org"}</script>
+{"name":"SpaceMIUI","description":"MIUI 9 based custom rom.","@context":"http://schema.org"}</script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#157878">
@@ -15,8 +15,8 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">SpaceDroidROM</h1>
-      <h2 class="project-tagline">Android 7.1.2 based custom rom.</h2>
+      <h1 class="project-name">SpaceMIUI</h1>
+      <h2 class="project-tagline">MIUI 9 based custom rom.</h2>
           <p><img src="/-/SpaceMIUI.jpg" alt="SpaceMIUI ART"/></p>
         <h2>Supported devices</h2>
         <table>
