--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <h2 class="project-tagline">MIUI 9 based custom rom.</h2>
           <img src="SpaceMIUI.jpg" alt="SpaceMIUI ART" class="center">
         <h2>Supported devices</h2>
-        <table>
+        <table class="center">
             <tr>
                 <th>Device name</th><th>Device code</th><th>Avibility</th><th>Download</th>
             </tr>
