--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <link rel="stylesheet" href="/-/jekyll-theme-slate.css">
   </head>
   <body>
+  <nav>
+  <ul>
+  <li><a href="/-/index.html">Home</a></li>
+  <li><a href="/-/recuitment.html">Recuitment</a></li>
     <section class="page-header">
       <h1 class="project-name">SpaceMIUI</h1>
       <h2 class="project-tagline">MIUI 9 based custom rom.</h2>
