--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <section class="page-header">
       <h1 class="project-name">SpaceMIUI</h1>
       <h2 class="project-tagline">MIUI 9 based custom rom.</h2>
-          <img src="SpaceMIUI.jpg" alt="SpaceMIUI ART" class="center">
+          <img src="Mi.jpg" alt="SpaceMIUI ART" class="center">
         <h2>Supported devices</h2>
         <table class="center">
             <tr>
